# Fold-Them

./: .env.example  .gitignore  01 v0_1 base spec.md  03 P2 pull failures clock skew.md  04 P2a attempt vs cycle.md  08 implementation errata.md  CLAUDE.md  Makefile  README.md  config.yaml  pyproject.toml
migrations/: 001_core.sql  002_events_entities.sql  003_snapshots_outcomes.sql  004_candidates_p1.sql  005_candidate_observations.sql  006_clv_results.sql  007_rejections.sql  008_indexes.sql
scripts/: init_db.py
spec/: 00_build_plan.md  02_P1_dedup.md  05_P3_historical_backtest.md  06_P3a_gap_cachekey.md  07_IA1_implementation_invariants.md  08_implementation_errata.md
src/: __init__.py  canonical.py  config_loader.py  constants.py  db.py  formulas.py  opportunity_key.py  repo.py
tests/: test_canonical.py  test_config_loader.py  test_constants.py  test_db.py  test_formulas.py  test_opportunity_key.py  test_repo.py
